administrator/templates/atum/scss/blocks/_toolbar.scss
.subhead {
  position: sticky;
  top: 0;
  right: 0;
  left: 0;
  z-index: $zindex-toolbar;
  width: auto;
  min-height: 43px;
  padding: 13px 0;
  color: #0c192e;
  background: var(--toolbar-bg);
  border-bottom: 1px solid $gray-400;

  .row {
    margin-right: 0;
    margin-left: 0;
  }

  .btn-toolbar {
    margin-bottom: 0;

    > * {
      margin-left: .75rem;

      &:first-child {
        margin-left: 0;
      }


      &.ml-auto {
        @include media-breakpoint-down(md) {
         /* margin-right: auto !important;
          margin-left: .75rem !important;*/
        }
      }
    }
  }

  .btn-group {
    .btn {
      .fa:first-child, [class^=icon-]:first-child{
        margin-right: 0;
      }
    }
  }

  .btn {
    background: $white;
    border-color: $gray-500;
    color: $gray-800;
    padding: 0 22px;
    font-size: 1rem;
    line-height: $atum-toolbar-line-height;

    [class^='icon-'],
    [class*=' icon-'],
    [class^='#{$fa-css-prefix}-'],
    [class*=' #{$fa-css-prefix}-'] {
      z-index: $zindex-negative;
      display: inline-block;
      width: 38px;
      height: auto;
      margin: 0 16px 0 -22px;
      line-height: $atum-toolbar-line-height;
      color: var(--white);
    }

    &.btn-success {

      background-color: $white;

      [class^='icon-'],
      [class*=' icon-'],
      [class^='#{$fa-css-prefix}-'],
      [class*=' #{$fa-css-prefix}-'],
      span {
        background-color: darken(theme-color("success"), 5%);
        color:rgba(255,255,255,0.90);
      }

      &:hover, &:active, &:focus {
        [class^='icon-'],
        [class*=' icon-'],
        [class^='#{$fa-css-prefix}-'],
        [class*=' #{$fa-css-prefix}-'],
        span {
          background-color: darken(theme-color("success"), 10%);
          color:rgba(255,255,255,0.90);
        }

        color:rgba(255,255,255,0.90);
        background-color: theme-color("success");
      }
    }

    &.btn-danger {

    background-color: $white;

    [class^='icon-'],
    [class*=' icon-'],
    [class^='#{$fa-css-prefix}-'],
    [class*=' #{$fa-css-prefix}-'],
    span {
      background-color: darken(theme-color("danger"), 5%);
      color:rgba(255,255,255,0.90);
    }

    &:hover, &:active, &:focu {
      [class^='icon-'],
      [class*=' icon-'],
      [class^='#{$fa-css-prefix}-'],
      [class*=' #{$fa-css-prefix}-'],
      span {
        background-color: darken(theme-color("danger"), 10%);
        color:rgba(255,255,255,0.90);
      }

      color:rgba(255,255,255,0.90);
      background-color: theme-color("danger");
    }
  }

    &.btn-primary {

      background-color: $white;

      [class^='icon-'],
      [class*=' icon-'],
      [class^='#{$fa-css-prefix}-'],
      [class*=' #{$fa-css-prefix}-'],
      span {
        background-color: darken(theme-color("primary"), 5%);
        color:rgba(255,255,255,0.90);
      }

      &:hover, &:active, &:focus {
        [class^='icon-'],
        [class*=' icon-'],
        [class^='#{$fa-css-prefix}-'],
        [class*=' #{$fa-css-prefix}-'],
        span {
          background-color: darken(theme-color("primary"), 10%);
          color:rgba(255,255,255,0.90);
        }

        color:rgba(255,255,255,0.90);
        background-color: theme-color("primary");
      }
    }

    &.btn-info {

      background-color: $white;

      [class^='icon-'],
      [class*=' icon-'],
      [class^='#{$fa-css-prefix}-'],
      [class*=' #{$fa-css-prefix}-'],
      span {
        background-color: darken(theme-color("primary"), 5%);
        color:rgba(255,255,255,0.90);
      }

      &:hover, &:active, &:focus {
        [class^='icon-'],
        [class*=' icon-'],
        [class^='#{$fa-css-prefix}-'],
        [class*=' #{$fa-css-prefix}-'],
        span {
          background-color: darken(theme-color("primary"), 10%);
          color:rgba(255,255,255,0.90);
        }

        color:rgba(255,255,255,0.90);
        background-color: theme-color("primary");
      }
    }

    &.btn-action {

      background-color: $white;

      [class^='icon-'],
      [class*=' icon-'],
      [class^='#{$fa-css-prefix}-'],
      [class*=' #{$fa-css-prefix}-'],
      span {
        background-color: darken(theme-color("primary"), 5%);
        color:rgba(255,255,255,0.90);
      }

      &:hover,  &:active, &:focus {
        [class^='icon-'],
        [class*=' icon-'],
        [class^='#{$fa-css-prefix}-'],
        [class*=' #{$fa-css-prefix}-'],
        span {
          background-color: darken(theme-color("primary"), 10%);
          color:rgba(255,255,255,0.90);
        }

        color:rgba(255,255,255,0.90);
        background-color: theme-color("primary");
      }
    }

    &[disabled],
    &.dropdown-toggle[disabled] {
      background-color: rgba($gray-300, 0.8);
      border-color: rgba($gray-500, 0.8);

      [class^='icon-'],
      [class*=' icon-'],
      [class^='#{$fa-css-prefix}-'],
      [class*=' #{$fa-css-prefix}-'],
      span {
        color: $gray-700;
        background-color: rgba($gray-500, 0.8);
      }

      &:hover,  &:active, &:focus {
        [class^='icon-'],
        [class*=' icon-'],
        [class^='#{$fa-css-prefix}-'],
        [class*=' #{$fa-css-prefix}-'],
        span {
          color: $gray-700;
          background-color: rgba($gray-500, 0.8);
        }
        background-color: rgba($gray-300, 0.8);
        cursor: not-allowed;
        color: $gray-700;
      }

    }
  }

  .dropdown-item {

    &:hover:not(.disabled) {
      color: #212529;
      cursor: pointer;
    }
  }

  .dropdown-toggle {

    &.btn {
      color: theme-color("atum-text-dark");

      span {
        background-color: theme-color("primary");
        color:rgba(255,255,255,0.90);
      }
    }

    &.btn-primary {
      span {
        background-color: theme-color("primary");
        color:rgba(255,255,255,0.90);
      }
    }

    &.btn-success {
      background-color: $white;
      padding: 0;

      span {
        background-color: theme-color("success");
        color:rgba(255,255,255,0.90);
      }

      &::after {
        border: none;
        content: '\f078';
        font-family: FontAwesome;
        vertical-align: 0;
        width: 38px;
      }
    }

    &.btn-info {
      background-color: darken(theme-color("info"), 8%);
    }

    &.btn-danger {
      background-color: darken(theme-color("danger"), 8%);
    }

    &.btn-action {
      background-color: $white;

      [class^='icon-'],
      [class*=' icon-'],
      [class^='#{$fa-css-prefix}-'],
      [class*=' #{$fa-css-prefix}-'] {
        background-color: theme-color("primary");
        color:rgba(255,255,255,0.90);
      }

      &:hover:not([disabled]) {
        background-color: darken(theme-color("primary"), 8%);
      }

      &::after {
        border: none;
        content: '\f078';
        font-family: FontAwesome;
        height: auto;
        margin: 0 -22px 0 16px;
        vertical-align: 0;
        width: 38px;
        line-height: 2.35;
      }
    }
  }
}

.btn-toolbar{

  .input-group-append {
    .btn-primary {
      background-color: darken(theme-color("primary"), 5%);
      color:rgba(255,255,255,0.90);
    }
  }
  >*{
    @include media-breakpoint-down(md) {
      margin-left:0 !important;
      margin-right:0.75rem;
      margin-bottom:0.75rem;
    }
  }

}

.js-stools{
  @include media-breakpoint-down(md) {
    justify-content:flex-start;
  }
  @include media-breakpoint-down(xs) {
    display:block;
  }
}

